<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>no.lau.vdvil</groupId>
    <artifactId>vdvil</artifactId>
    <version>0.15-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Vdvil Root</name>
    <description>Vdvil - Framework for multimedia structuring, composition and playback</description>
    <url>http://play.kompo.st</url>
    <licenses>
        <license>
            <name>Apache 2</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Stig Lau</name>
            <email>stig@lau.no</email>
            <url>http://stig.lau.no</url>
        </developer>
        <developer>
            <name>Konrad Beiske</name>
        </developer>
        <developer>
            <name>Michael Stokes</name>
        </developer>
        <developer>
            <name>And some more ppl which I'll have to add later!</name>
        </developer>
    </developers>

    <modules>
        <module>renderer</module>
        <module>renderer-v2</module>
        <module>composition-handler</module>
        <module>audio-renderer</module>
        <module>lyric-renderer</module>
        <module>image-renderer</module>
        <module>simple-cache</module>
        <module>json-parser</module>
        <module>play-gui</module>
        <!-- <module>play-gui-webstart-distribution</module> Commented out until v1.0-snapshot-7 is released-->
        <module>binding-layer</module>
        <!--    <module>play-per-view</module> -->
    </modules>


    <!-- Common dependency management-->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>renderer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>audio-renderer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>image-renderer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>lyric-renderer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>simple-cache</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>composition-handler</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>binding-layer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>renderer-v2</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>json-renderer</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>1.4.1</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.2.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.7</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.7</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <!-- to use this functionality do
                    mvn clean deploy -DperformRelease
                    or
                    mvn clean release:prepare release:perform -DperformRelease -->
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <!--
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            -->
        </profile>
    </profiles>
    
    <scm>
        <connection>scm:git:ssh://github.com/StigLau/vdvil.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/StigLau/vdvil.git</developerConnection>
        <url>http://github.com/StigLau/vdvil</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
